feature/added-disabilities (#26)
