# src/controller/person_controller.go
@@ -195,6 +195,56 @@ func (n *PersonController) UpdatePersonAddress(ctx *fiber.Ctx) error {
 	return ctx.Status(http.StatusOK).JSON(response)
 }
 
+// UpdatePersonDisabilities
+// @Summary Update a person disabilities.
+// @Description update an existent person disabilities.
+// @Tags People
+// @Accept */*
+// @Produce json
+// @Param disabilities body []int true "Disabilities"
+// @Param id path string true "Person ID"
+// @Success 200 {object} string "success"
+// @Failure 400 {object} string "bad request"
+// @Failure 500 {object} string "internal server error"
+// @Router /people/:id/disabilities [put]
+func (n *PersonController) UpdatePersonDisabilities(ctx *fiber.Ctx) error {
+	var disabilities []int
+	var response model.Response
+
+	if err := ctx.BodyParser(&disabilities); err != nil {
+		response = model.Response{
+			Message: err.Error(),
+		}
+
+		return ctx.Status(http.StatusBadRequest).JSON(response)
+	}
+
+	personId := ctx.Params("id")
+
+	idInt, err := strconv.Atoi(personId)
+	if err != nil {
+		response = model.Response{
+			Message: err.Error(),
+		}
+
+		return ctx.Status(http.StatusBadRequest).JSON(response)
+	}
+
+	if err := n.personService.UpdatePersonDisabilities(disabilities, idInt); err != nil {
+		response = model.Response{
+			Message: err.Error(),
+		}
+
+		return ctx.Status(http.StatusInternalServerError).JSON(response)
+	}
+
+	response = model.Response{
+		Message: "success",
+	}
+
+	return ctx.Status(http.StatusOK).JSON(response)
+}
+
 // DeletePerson
 // @Summary Delete a person.
 // @Description delete an existent person and their user.
